<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/knight"
            android:title="@string/title_home" />
        <item
            android:id="@+id/nav_story"
            android:icon="@drawable/certificate"
            android:title="@string/title_story" />
        <item
            android:id="@+id/nav_monsters"
            android:icon="@drawable/podium"
            android:title="@string/title_leaderboards" />
        <item
            android:id="@+id/nav_runlogs"
            android:icon="@drawable/stopwatch"
            android:title="@string/title_runlog" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/title_settings" />
            <item
                android:id="@+id/nav_signout"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/title_signout" />
        </menu>
    </item>

</menu>
